--- a/siteBlue/index.html
+++ b/siteBlue/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>iRunBook.ai</title>
+    <title>BlueRunBook.ai</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
@@ -13,12 +13,12 @@
         <p> AI running .....</p>
     </div>    
     <header>
-        <h1><span>i</span>RunBook.ai</h1>
+        <h1><span>i</span>blueRunBook.ai</h1>
     </header>
     <main>
         <section>
             <h2>About</h2>
-            <p>iRunBook.ai is a powerful platform for creating and automating runbooks with AI assistance.</p>
+            <p>BlueRunBook.ai is a powerful platform for creating and automating runbooks with AI assistance.</p>
         </section>
         <section>
             <h2>Features</h2>
@@ -28,11 +28,13 @@
                 <li>Seamless integration with existing tools</li>
                 <li>Efficient collaboration and task management</li>
             </ul>
-            <h3>List of iRunbooks</h3> 
+            <h3>List of BlueRunbooks</h3> 
                 <ul>
-                <li><a href="https://raw.githubusercontent.com/kodesam/openshift_cli_in_juypter/main/kubectl%20get%20nodes.yaml">kubectl command get nodes</a></li>
-                <li><a href="https://raw.githubusercontent.com/kodesam/openshift_cli_in_juypter/main/openshift%20get%20nodes.yaml">openshift command get nodes </a></li>
-                <li><a href="https://raw.githubusercontent.com/kodesam/openshift_cli_in_juypter/main/openshift%20get%20pvc_6.yaml">openshift command get pvc</a></li>
+                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/ansible/kubectl%20get%20pods.yaml">kubectl command get pod</a></li>
+                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/ansible/">ansible </a></li>
+                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/Shell/">Shell</a></li>
+                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/linux/">linux</a></li>
+                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/python/">python</a></li>
                 <!-- Add more file links as needed -->
                 </ul>
             
