--- a/siteBlue/index.html
+++ b/siteBlue/index.html
@@ -27,6 +27,7 @@
                 <li>Intuitive and user-friendly interface</li>
                 <li>Seamless integration with existing tools</li>
                 <li>Efficient collaboration and task management</li>
+                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/python/">Python Folder</a></li>
             </ul>
             <h3>List of BlueRunbooks</h3> 
                 <ul>
@@ -34,7 +35,7 @@
                 <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/ansible/">ansible </a></li>
                 <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/Shell/">Shell</a></li>
                 <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/linux/">linux</a></li>
-                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/python/">python</a></li>
+                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/python/">python Folder</a></li>
                 <!-- Add more file links as needed -->
                 </ul>
             
@@ -44,3 +45,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
