--- a/siteBlue/index.html
+++ b/siteBlue/index.html
@@ -27,7 +27,7 @@
                 <li>Intuitive and user-friendly interface</li>
                 <li>Seamless integration with existing tools</li>
                 <li>Efficient collaboration and task management</li>
-                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/python/">Python Folder</a></li>
+                <li><a href="https://github.com/kodesam/collection-b-runbooks/tree/main/python">Python Folder</a></li>
             </ul>
             <h3>List of BlueRunbooks</h3> 
                 <ul>
