--- a/siteBlue/index.html
+++ b/siteBlue/index.html
@@ -27,7 +27,7 @@
                 <li>Intuitive and user-friendly interface</li>
                 <li>Seamless integration with existing tools</li>
                 <li>Efficient collaboration and task management</li>
-                <li><a href="https://github.com/kodesam/collection-b-runbooks/tree/main/python">Python Folder</a></li>
+                <li><a href="https://raw.githubusercontent.com/kodesam/collection-b-runbooks/main/python/">Python</a></li>
             </ul>
             <h3>List of BlueRunbooks</h3> 
                 <ul>
@@ -35,7 +35,7 @@
                 <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/ansible/">ansible </a></li>
                 <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/Shell/">Shell</a></li>
                 <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/linux/">linux</a></li>
-                <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/python/">python Folder</a></li>
+                <li><a href="https://github.com/kodesam/collection-b-runbooks/tree/main/python">python Folder</a></li>
                 <!-- Add more file links as needed -->
                 </ul>
             
