--- a/siteBlue/index.html
+++ b/siteBlue/index.html
@@ -35,7 +35,7 @@
                 <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/ansible/">ansible </a></li>
                 <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/Shell/">Shell</a></li>
                 <li><a href="https://raw.githubusercontent.com/kodesam/collection-i-runbooks/main/linux/">linux</a></li>
-                <li><a href="https://github.com/kodesam/collection-b-runbooks/tree/main/python">python Folder</a></li>
+                # <li><a href="https://github.com/kodesam/collection-b-runbooks/tree/main/python">python Folder</a></li>
                 <!-- Add more file links as needed -->
                 </ul>
             
