--- a/sitex/index.html
+++ b/sitex/index.html
@@ -11,29 +11,47 @@
         // GitHub repository details
         const owner = "kodesam";
         const repo = "collection-i-runbooks";
-        const folder = "python";
+        const folders = ["python", "ansible", "linux"];
 
         // Fetch the list of files from the GitHub API
-        fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${folder}`)
-            .then(response => response.json())
-            .then(data => {
-                // Process the file data
-                const fileList = data.map(file => {
-                    return {
-                        name: file.name,
-                        url: file.download_url,
-                    };
-                });
+        Promise.all(
+            folders.map(folder =>
+                fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${folder}`)
+                    .then(response => response.json())
+                    .then(data =>
+                        data.map(file => ({
+                            folder: folder,
+                            name: file.name,
+                            url: file.download_url
+                        }))
+                    )
+            )
+        )
+            .then(filesPerFolder => {
+                // Flatten the file array
+                const fileList = filesPerFolder.flat();
 
                 // Render the file list on the web page
                 const fileListElement = document.getElementById("file-list");
                 fileList.forEach(file => {
                     const fileElement = document.createElement("a");
                     fileElement.href = file.url;
-                    fileElement.text = file.name;
+                    fileElement.text = `${file.folder}/${file.name}`;
                     fileElement.target = "_blank";
 
+                    const contentElement = document.createElement("pre");
+                    fetch(file.url)
+                        .then(response => response.text())
+                        .then(content => {
+                            contentElement.textContent = content;
+                        })
+                        .catch(error => {
+                            console.error(`Error fetching file content for ${file.name}:`, error);
+                            contentElement.textContent = "Error fetching file content.";
+                        });
+
                     fileListElement.appendChild(fileElement);
+                    fileListElement.appendChild(contentElement);
                     fileListElement.appendChild(document.createElement("br"));
                 });
             })
