--- a/sitez/index.html
+++ b/sitez/index.html
@@ -14,6 +14,8 @@
     </div>    
     <header>
         <h1><span>i</span>blueRunBook.ai</h1>
+        <h1>GitHub File Viewer</h1>
+        <div id="file-list"></div>
     </header>
     <main>
         <section>
