--- a/Bluebook/index.html
+++ b/Bluebook/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>zzzzBlueRunBook.ai</title>
+    <title>BlueRunBook.ai</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
  <style>
@@ -24,7 +24,7 @@
         <p> AI running .>.>.>.>.>.> </p>
     </div>    
     <header>
-        <h1><span>i</span>blueRunBook.ai</h1>
+        <h1><span>B</span>BlueRunBook.ai</h1>
     </header>
     <main class="scroll-container">  <!-- Wrap the content in a scrollable container -->
         <section>
