--- a/Bluebook/index.html
+++ b/Bluebook/index.html
@@ -24,7 +24,7 @@
         <p> AI running .>.>.>.>.>.> </p>
     </div>    
     <header>
-        <h1><span>B</span>BlueRunBook.ai</h1>
+        <h1><span>B</span>lueRunBook.ai</h1>
     </header>
     <main class="scroll-container">  <!-- Wrap the content in a scrollable container -->
         <section>
