--- a/Bluebook/index.html
+++ b/Bluebook/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="container">
-        <p> AI running .>.>.>.>.>.> </p>
+        <p> AI running ..... </p>
     </div>    
     <header>
         <h1><span>B</span>lueRunBook.ai</h1>
