--- a/Bluebook/index.html
+++ b/Bluebook/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
     <div class="container">
-        <p> AI running ..... </p>
-    </div>    
+    <p class="running-text">AI running<span class="running-script">.</span></p>
+    </div>   
     <header>
         <h1><span>B</span>lueRunBook.ai</h1>
     </header>
