--- a/Bluebook/index.html
+++ b/Bluebook/index.html
@@ -26,13 +26,13 @@
         <span class="ai-letter">A</span>
         <span class="ai-letter">I</span>
         <span class="space"></span>
-        <span class="running-script">r</span>
+        <span class="running-script">R</span>
         <span class="running-script">u</span>
         <span class="running-script">n</span>
         <span class="running-script">n</span>
         <span class="running-script">i</span>
         <span class="running-script">n</span>
-        <span class="running-script">g</span>
+        <span class="running-script">G</span>
     </p>
 </div>
 
