--- a/Bluebook/index.html
+++ b/Bluebook/index.html
@@ -89,7 +89,7 @@
         <script>
         const owner = "kodesam";
         const repo = "collection-i-runbooks";
-        const folders = ["python", "ansible", "linux"];
+        const folders = ["python", "ansible", "linux","Shell"];
 
         // Fetch the list of files from the GitHub API
         Promise.all(
